Fix some settings and options are ignored

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,9 @@ project(fftw)
 
 option(BUILD_SHARED_LIBS "Build shared libraries" OFF)
 
+include(../conanbuildinfo.cmake)
+conan_basic_setup()
+
 add_definitions(-D_CRT_SECURE_NO_WARNINGS)
 add_definitions(/Oi) # enable intrinsic functions
 add_definitions(/MP) # enable parallel compile
